--- a/store/templates/home.html
+++ b/store/templates/home.html
@@ -49,7 +49,7 @@
           <!-- Product actions-->
           <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
 						<div class="text-center">
-							<a class="btn btn-outline-dark mt-auto" href="#">View Product</a>
+							<a class="btn btn-outline-dark mt-auto" href="{% url 'product' product.id %}">View Product</a>
 						</div>
           </div>
         </div>
@@ -72,7 +72,7 @@
           </div>
           <!-- Product actions-->
           <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-						<div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View Product</a></div>
+						<div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'product' product.id %}">View Product</a></div>
           </div>
         </div>
       </div>
