--- a/store/templates/product.html
+++ b/store/templates/product.html
@@ -1,12 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-
-
 <div class="container">
 	<br/>
-
-
 	<div class="card mb-3">
 		<div class="row g-0">
 			<div class="col-md-4">
@@ -54,7 +50,7 @@
             </div>
             <br/><br/>
 						<a href="{% url 'home'%}" class="btn btn-secondary">Home</a>
-						<button type="button" value="{{ product.id }}" class="btn btn-secondary" id="">Add To Cart</button>
+						<button type="button" value="{{ product.id }}" class="btn btn-secondary" id="add-cart">Add To Cart</button>
 
 					</center>
 				</div>
@@ -66,5 +62,40 @@
 
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 
+<script>
+// Check if button pressed
+$(document).on('click', '#add-cart', function(e){
+    e.preventDefault();
+    $.ajax({
+        type: 'POST',
+        url: '{% url 'cart_add' %}',
+        data: {
+    product_id: $('#add-cart').val(),
+    // product_qty: $('#qty-cart option:selected').text(),
+    csrfmiddlewaretoken: '{{ csrf_token }}',
+    action: 'post'
+        },
+
+        success: function(json){
+            console.log(json)
+            // document.getElementById("cart_quantity").textContent = json.qty
+            // location.reload();
+        },
+
+        error: function(xhr, errmsg, err){
+
+        }
+
+
+    });
+
+
+
+})
+
+
+
+
+</script>
 
 {% endblock %}
