--- a/store/templates/product.html
+++ b/store/templates/product.html
@@ -77,8 +77,8 @@ $(document).on('click', '#add-cart', function(e){
         },
 
         success: function(json){
-            console.log(json)
-            // document.getElementById("cart_quantity").textContent = json.qty
+            // console.log(json)
+            document.getElementById("cart_quantity").textContent = json.qty
             // location.reload();
         },
 
