--- a/store/templates/product.html
+++ b/store/templates/product.html
@@ -77,9 +77,9 @@ $(document).on('click', '#add-cart', function(e){
         },
 
         success: function(json){
-            // console.log(json)
+            console.log(json)
             document.getElementById("cart_quantity").textContent = json.qty
-            // location.reload();
+            location.reload();
         },
 
         error: function(xhr, errmsg, err){
