--- a/store/templates/product.html
+++ b/store/templates/product.html
@@ -71,7 +71,7 @@ $(document).on('click', '#add-cart', function(e){
         url: '{% url 'cart_add' %}',
         data: {
     product_id: $('#add-cart').val(),
-    // product_qty: $('#qty-cart option:selected').text(),
+    product_qty: $('#qty-cart option:selected').text(),
     csrfmiddlewaretoken: '{{ csrf_token }}',
     action: 'post'
         },
