--- a/cart/templates/cart_summary.html
+++ b/cart/templates/cart_summary.html
@@ -84,75 +84,84 @@
 
 
   {% endfor %}
+  <div align="right">
+    <h3>Total: ${{ totals }}</h3>
+
+  </div>
   <br/><br/><br/>
   {% else %}
   There's Nothing In Your Cart...
   <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
   {% endif %}
 </div>
-	<script>
-		// Update Cart
-		$(document).on('click', '.update-cart', function(e){
-			e.preventDefault();
-			// grab the product id
-			var productid = $(this).data('index');
-
-			$.ajax({
-				type: 'POST',
-				url: '{% url 'cart_update' %}',
-				data: {
-					product_id: $(this).data('index'),
-					product_qty: $('#select' + productid + ' option:selected').text(),
-					csrfmiddlewaretoken: '{{ csrf_token }}',
-					action: 'post'
-				},
-				success: function(json){
-					//console.log(json)
-					//document.getElementById("cart_quantity").textContent = json.qty
-					location.reload();
-				},
-
-				error: function(xhr, errmsg, err){
-
-				}
 
 
-			});
-
-		})
-		
-		// TODO: Recover delete ajax logic 
-
-		// Delete Item From Cart
-		$(document).on('click', '.delete-product', function(e){
-			e.preventDefault();
-			// grab the product id
-			//var productid = $(this).data('index');
-
-			$.ajax({
-				type: 'POST',
-				url: '{% url 'cart_delete' %}',
-				data: {
-					product_id: $(this).data('index'),
-					csrfmiddlewaretoken: '{{ csrf_token }}',
-					action: 'post'
-				},
-				success: function(json){
-					//console.log(json)
-					//document.getElementById("cart_quantity").textContent = json.qty
-					location.reload();
-				},
-
-				error: function(xhr, errmsg, err){
-
-				}
 
 
-			});
+<script>
+	// Update Cart
+	$(document).on('click', '.update-cart', function(e){
+    e.preventDefault();
+    // grab the product id
+    var productid = $(this).data('index');
 
-		})
+    $.ajax({
+			type: 'POST',
+			url: '{% url 'cart_update' %}',
+			data: {
+				product_id: $(this).data('index'),
+				product_qty: $('#select' + productid + ' option:selected').text(),
+				csrfmiddlewaretoken: '{{ csrf_token }}',
+				action: 'post'
+			},
+			success: function(json){
+        //console.log(json)
+        //document.getElementById("cart_quantity").textContent = json.qty
+        location.reload();
+			},
 
-	</script>
+			error: function(xhr, errmsg, err){
+
+			}
 
 
-	{% endblock %}
+    });
+
+	})
+
+	// Delete Item From Cart
+	$(document).on('click', '.delete-product', function(e){
+    e.preventDefault();
+    // grab the product id
+    //var productid = $(this).data('index');
+
+    $.ajax({
+			type: 'POST',
+			url: '{% url 'cart_delete' %}',
+			data: {
+				product_id: $(this).data('index'),
+				csrfmiddlewaretoken: '{{ csrf_token }}',
+				action: 'post'
+			},
+			success: function(json){
+        //console.log(json)
+        //document.getElementById("cart_quantity").textContent = json.qty
+        location.reload();
+			},
+
+			error: function(xhr, errmsg, err){
+
+			}
+
+
+    });
+
+	})
+
+
+
+
+</script>
+
+
+{% endblock %}
